configure azure function in dotnet isolated mode

--- a/src/Blob.Storage.Listner/Properties/launchSettings.json
+++ b/src/Blob.Storage.Listner/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "BlobStorageListner": {
+    "Blob.Storage.Listner": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7284",
+      "commandLineArgs": "--port 7253",
       "launchBrowser": false
     }
   }
