--- a/src/Blob.Storage.Listner/Blob.Storage.Listner.csproj
+++ b/src/Blob.Storage.Listner/Blob.Storage.Listner.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.3.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\StorageMailNotifier.Application\StorageMailNotifier.Application.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
