add  zip-deploy property on ci-cd pipeline to fix deployment error

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -44,3 +44,4 @@ jobs:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
         publish-profile: ${{ secrets.StorageMailNotifier_FCEC }}
         package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+        zip-deploy: true
